// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlternateBufferQuittingDisplay > renders with active and pending tool messages > with_history_and_pending 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації.
╭─────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool1 Description for tool 1                                             │
│                                                                             │
╰─────────────────────────────────────────────────────────────────────────────╯
╭─────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool2 Description for tool 2                                             │
│                                                                             │
╰─────────────────────────────────────────────────────────────────────────────╯
╭─────────────────────────────────────────────────────────────────────────────╮
│ o  tool3 Description for tool 3                                             │
│                                                                             │
╰─────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AlternateBufferQuittingDisplay > renders with empty history and no pending items > empty 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації."
`;

exports[`AlternateBufferQuittingDisplay > renders with history but no pending items > with_history_no_pending 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації.
╭─────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool1 Description for tool 1                                             │
│                                                                             │
╰─────────────────────────────────────────────────────────────────────────────╯
╭─────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool2 Description for tool 2                                             │
│                                                                             │
╰─────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AlternateBufferQuittingDisplay > renders with pending items but no history > with_pending_no_history 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації.
╭─────────────────────────────────────────────────────────────────────────────╮
│ o  tool3 Description for tool 3                                             │
│                                                                             │
╰─────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AlternateBufferQuittingDisplay > renders with user and gemini messages > with_user_gemini_messages 1`] = `
"
 ███         █████████
░░░███      ███░░░░░███
  ░░░███   ███     ░░░
    ░░░███░███
     ███░ ░███    █████
   ███░   ░░███  ░░███
 ███░      ░░█████████
░░░         ░░░░░░░░░

Поради для початку роботи:
1. Ставте запитання, редагуйте файли або виконуйте команди.
2. Будьте конкретними для отримання найкращих результатів.
3. Створюйте файли GEMINI.md, щоб налаштувати вашу взаємодію з Gemini.
4. /help для отримання додаткової інформації.

> Hello Gemini

✦  Hello User!"
`;
